--- a/assets/css/404design.css
+++ b/assets/css/404design.css
@@ -1,5 +1,6 @@
 body{
-	background-color: black;
+    background-image: url(../img/try.gif);
+    background-size: cover;
 }
 h1{
   font-family: 'Arvo', serif;    
